Develop (#1)
* Issue-0: Update pipeline